# model-registry-sdk

./: authtest.py  dummpy_test.py  mlf_test.py  model_info.yaml  modeltest.py  ncai_test.py  pyproject.toml  test.py  train.py
aip/: __init__.py  constants.py  exceptions.py
aip/_internal/: _model_regisry_service.py  _tracking_service.py
aip/auth/: __init__.py
aip/constants/: __init__.py
aip/entities/: experiment.py  metric.py  model.py  model_info.py  model_version.py  param.py  registered_model.py  retrain_info.py  run.py  tracker.py
aip/entities/sacp/: sacp_task_info.py
aip/models/: __init__.py
aip/ncai/: __init__.py
aip/store/: _tracking_store.py  model_store.py  tracking_store.py
aip/tracking/trackers/: __init__.py  loader.py  ncai_tracker.py  sacp_tracker.py
aip/utils/: timeutils.py
test/: auth_test.py
