[tool.poetry]
name = "model-registry-sdk"
version = "0.1.0"
description = ""
authors = ["20100094 <hyun24436@gmail.com>"]
#readme = "README.md"
packages = [{include = "aip"}]

[tool.poetry.dependencies]
pytz = "^2023.3"
requests = "^2.31.0"
pydantic = "^1.8.2"
#mlflow = "^2.8.0"
#boto3 = "^1.28.74"
#bentoml = "^1.1.7"
#xgboost = "^2.0.1"
#fs-s3fs = "^1.1.1"
#pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
